<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/login_Logo_IV"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_username_ET"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:layout_above="@+id/login_password_ET"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/login_password_ET"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:layout_above="@+id/login_nuser_Btn"
            android:layout_marginBottom="50dp" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_In"
                android:id="@+id/login_Log_Btn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/New_user"
                android:id="@+id/login_nuser_Btn"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_recoverPassword"
            android:id="@+id/login_recoverPass_BT"
            android:layout_alignBaseline="@+id/login_nuser_Btn"
            android:layout_alignBottom="@+id/login_nuser_Btn"
            android:layout_toRightOf="@+id/login_nuser_Btn"
            android:layout_toEndOf="@+id/login_nuser_Btn"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</ScrollView>