<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false"
    android:id="@+id/scrollView_manageGroups">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="itesm.mx.finalprojectmobile20.UserProfile"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/mg_profile_IV"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg_groupName"
            android:id="@+id/mg_groupname_TV"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/mg_profile_IV"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Type new group name"
            android:id="@+id/mg_groupName_ET"
            android:layout_below="@+id/mg_groupname_TV"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg_groupMotto_TV"
            android:id="@+id/mg_groupMotto_TV"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/mg_groupname_TV"
            android:layout_alignEnd="@+id/mg_groupname_TV" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Type new group motto"
            android:id="@+id/mg_groupMotto_ET"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/mg_groupMotto_TV"
            android:layout_alignRight="@+id/mg_groupName_ET"
            android:layout_alignEnd="@+id/mg_groupName_ET" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg_members_TV"
            android:id="@+id/mg_members_TV" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/mg_members_LV"
            android:layout_below="@+id/mg_groupMotto_ET"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/mg_changePic_BT"
            android:layout_weight="2.57" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mg_addFriend"
                android:id="@+id/mg_addFriend_BT"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change picture"
                android:id="@+id/mg_changePic_BT"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg_saveChanges"
            android:id="@+id/mg_saveChanges_BT"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/mg_addFriend_BT"
            android:layout_toStartOf="@+id/mg_addFriend_BT"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</ScrollView>